--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Faça da sua casa seu lar</h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="https://wa.me/5513988199921?text=Ol%C3%A1!%20Achei%20voc%C3%AAs%20pelo%20site." class="btn btn-primary py-sm-3 px-sm-4">Contato</a>
                                 </div>
                             </div>
                         </div>
@@ -123,7 +123,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Confie no poder da limpeza</h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
+                                    <a href="https://wa.me/5513988199921?text=Ol%C3%A1!%20Achei%20voc%C3%AAs%20pelo%20site." class="btn btn-primary py-sm-3 px-sm-4">Contato</a>
                                 </div>
                             </div>
                         </div>
@@ -206,7 +206,7 @@
                     <p class="text-primary mb-4">Anos de experiência</p>
                     <h1 class="display-5 mb-4">Deixando sua casa mais cheirosa </h1>
                     <p class="mb-4">Estamos a 20 anos deixando sua casa mais cheirosa na sua melhor versão</p>
-                    <a class="btn btn-primary py-3 px-4" href="">Explore More</a>
+                    <a class="btn btn-primary py-3 px-4" href="https://wa.me/5513988199921?text=Ol%C3%A1!%20Achei%20voc%C3%AAs%20pelo%20site.">Contato</a>
                 </div>
                 <div class="col-lg-3 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-5">
@@ -266,7 +266,7 @@
                     <p class="fs-5 fw-bold text-primary">Por que nos escolher?</p>
                     <h1 class="display-5 mb-4">Somos a principal loja de produtos de limpeza do bairro</h1>
                     <p class="mb-4">A mais de 20 anos fornecendo produtos de qualidade para nossos clientes fizemos sólidos e fiéis clientes, com preços competitivos estamos abertos todos os dias da semana para melhor atender.</p>
-                    <a class="btn btn-primary py-3 px-4" href="">Explore More</a>
+                    <a class="btn btn-primary py-3 px-4" href="https://wa.me/5513988199921?text=Ol%C3%A1!%20Achei%20voc%C3%AAs%20pelo%20site.">Contato</a>
                 </div>
                 <div class="col-lg-6">
                     <div class="row g-4 align-items-center">
@@ -338,8 +338,8 @@
                             <div class="btn-square rounded-circle mx-auto mb-3">
                                 <!--<img class="img-fluid" src="img/icon/icon-6.png" alt="Icon"> -->
                             </div>
-                            <h4 class="mb-3">Pruning plants</h4>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                            <h4 class="mb-3">Linha completa</h4>
+                            <p class="mb-4">Linha completa de produtos para limpeza da sua casa, desde rodos e vassouras até sabão e amaciante</p>
                             <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Read More</a>
                         </div>
                     </div>
@@ -398,8 +398,8 @@
                             <div class="btn-square rounded-circle mx-auto mb-3">
                                 <!--<img class="img-fluid" src="img/icon/icon-2.png" alt="Icon"> -->
                             </div>
-                            <h4 class="mb-3">Urban Gardening</h4>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                            <h4 class="mb-3">Venha conhecer nossa loja</h4>
+                            <p class="mb-4">Conheça nossos produtos e acessórios, teremos prazer em atender você.</p>
                             <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Read More</a>
                         </div>
                     </div>
@@ -410,7 +410,7 @@
     <!-- Service End -->
 
 
-    <!-- Quote Start -->
+    <!-- Quote Start 
     <div class="container-fluid quote my-5 py-5" data-parallax="scroll" data-image-src="img/carousel-2.jpg">
         <div class="container py-5">
             <div class="row justify-content-center">
@@ -457,10 +457,10 @@
             </div>
         </div>
     </div>
-    <!-- Quote End -->
+     Quote End -->
 
 
-    <!-- Projects Start -->
+    <!-- Projects Start
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
@@ -552,18 +552,18 @@
             </div>
         </div>
     </div>
-    <!-- Projects End -->
+     Projects End -->
 
 
     <!-- Team Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-bold text-primary">Our Team</p>
-                <h1 class="display-5 mb-5">Dedicated & Experienced Team Members</h1>
+                <p class="fs-5 fw-bold text-primary">Nosso time</p>
+                <h1 class="display-5 mb-5">Dedicação e experiência</h1>
             </div>
             <div class="row g-4">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <!--<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item rounded">
                         <img class="img-fluid" src="img/team-1.jpg" alt="">
                         <div class="team-text">
@@ -576,22 +576,27 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="team-item rounded">
-                        <img class="img-fluid" src="img/team-2.jpg" alt="">
-                        <div class="team-text">
-                            <h4 class="mb-0">Johnny Ramirez</h4>
-                            <p class="text-primary">Garden Designer</p>
-                            <div class="team-social d-flex">
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-instagram"></i></a>
+                </div> -->
+                <div class="row g-4 d-flex justify-content-center">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="team-item rounded">
+                            <img class="img-fluid" src="img/team-2.jpg" alt="">
+                            <div class="team-text">
+                                <h4 class="mb-0">Maria Regina</h4>
+                                <p class="text-primary">Proprietária</p>
+                                <div class="team-social d-flex">
+                                    <!--<a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
+                                    <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a> -->
+                                    <a class="btn btn-square rounded-circle me-2" href="https://www.instagram.com/belacasa_caicara/"><i class="fab fa-instagram"></i></a>
+                                    <a class="btn btn-square rounded-circle me-2" href="https://wa.me/5513988199921?text=Ol%C3%A1!%20Achei%20voc%C3%AAs%20pelo%20site." target="_blank">
+                                        <i class="fab fa-whatsapp"></i>
+                                    </a>
+                                </div>      
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
                         <img class="img-fluid" src="img/team-3.jpg" alt="">
                         <div class="team-text">
@@ -604,7 +609,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -616,24 +621,24 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="fs-5 fw-bold text-primary">Testimonial</p>
-                    <h1 class="display-5 mb-5">What Our Clients Say About Us!</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit sed stet lorem sit clita duo justo.</p>
+                    <p class="fs-5 fw-bold text-primary">Clientes</p>
+                    <h1 class="display-5 mb-5">O que nossos cliente dizem sobre nós</h1>
+                    <p class="mb-4">Atendemos bem para atender sempre, o cliente satisfeito sempre volta com um sorriso no rosto, pois para nós a satirfação é algo imprescindível.</p>
                     <a class="btn btn-primary py-3 px-4" href="">See More</a>
                 </div>
                 <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="owl-carousel testimonial-carousel">
                         <div class="testimonial-item">
                             <img class="img-fluid rounded mb-3" src="img/testimonial-1.jpg" alt="">
-                            <p class="fs-5">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
-                            <h4>Client Name</h4>
-                            <span>Profession</span>
+                            <p class="fs-5">Há uma senhorinha que sempre me atende bem, amo ser atendido por ela</p>
+                            <h4>Verônica Garcia</h4>
+                            <span>Administradora de Empresas</span>
                         </div>
                         <div class="testimonial-item">
                             <img class="img-fluid rounded mb-3" src="img/testimonial-2.jpg" alt="">
-                            <p class="fs-5">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
-                            <h4>Client Name</h4>
-                            <span>Profession</span>
+                            <p class="fs-5">Produtos ótimos e baratos, amo comprar lá, sempre saio com a sacola cheia</p>
+                            <h4>Rafael Calisto</h4>
+                            <span>Engenheiro</span>
                         </div>
                     </div>
                 </div>
@@ -642,23 +647,32 @@
     </div>
     <!-- Testimonial End -->
 
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3643.4146031018263!2d-46.54298372465477!3d-24.051700078466016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce204c7824e6d7%3A0x80d87219652b032!2sAv.%20Pres.%20Kennedy%2C%2014216%20-%20Vila%20Cai%C3%A7ara%2C%20Praia%20Grande%20-%20SP%2C%2011702-200!5e0!3m2!1spt-BR!2sbr!4v1740652009292!5m2!1spt-BR!2sbr" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <div class="row g-5">
+            <div class="row g-5 justify-content-center text-center">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
+                    <h4 class="text-white mb-4">Nossa loja</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Avenida Presidente Kennedy <br> Número 14.216, Caiçara <br> Praia Grande - SP</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+55 13 98819-9921</p>
+                    <!-- <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p> -->
+                    <div class="d-flex pt-2 justify-content-center text-center">
+                        <!-- <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-linkedin-in"></i></a> -->
+                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://www.instagram.com/belacasa_caicara/" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://wa.me/5513988199921?text=Ol%C3%A1!%20Achei%20voc%C3%AAs%20pelo%20site." target="_blank">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
+                        
                     </div>
                 </div>
+                <!--
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Services</h4>
                     <a class="btn btn-link" href="">Landscaping</a>
@@ -682,7 +696,7 @@
                         <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
