--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
@@ -91,9 +91,9 @@
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div> -->
-                <a href="contact.html" class="nav-item nav-link">Contato</a>
+                <a href="contato.html" class="nav-item nav-link">Contato</a>
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Fale conosco<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="https://wa.me/5513988199921?text=Ol%C3%A1!%20Achei%20voc%C3%AAs%20pelo%20site." class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Fale conosco<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -202,12 +202,15 @@
                     <img class="img-fluid rounded" data-wow-delay="0.1s" src="img/about.jpg">
                 </div>
                 <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.3s">
-                    <h1 class="display-1 text-primary mb-0">20</h1>
+                    <h1 class="display-1 text-primary mb-0">
+                        <span>+</span><span>20</span>
+                    </h1>
                     <p class="text-primary mb-4">Anos de experiência</p>
-                    <h1 class="display-5 mb-4">Deixando sua casa mais cheirosa </h1>
-                    <p class="mb-4">Estamos a 20 anos deixando sua casa mais cheirosa na sua melhor versão</p>
+                    <h1 class="display-5 mb-4">Deixando sua casa mais cheirosa</h1>
+                    <p class="mb-4">Estamos há 20 anos deixando sua casa mais cheirosa na sua melhor versão</p>
                     <a class="btn btn-primary py-3 px-4" href="https://wa.me/5513988199921?text=Ol%C3%A1!%20Achei%20voc%C3%AAs%20pelo%20site.">Contato</a>
                 </div>
+                
                 <div class="col-lg-3 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-5">
                         <div class="col-12 col-sm-6 col-lg-12">
@@ -232,30 +235,37 @@
     <!-- About End -->
 
 
-    <!-- Facts Start -->
-    <div class="container-fluid facts my-5 py-5" data-parallax="scroll" data-image-src="img/carousel-1.jpg">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">20</h1>
-                    <span class="fs-5 fw-semi-bold text-light">Anos de mercado</span>
-                </div>
-                <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">600</h1>
-                    <span class="fs-5 fw-semi-bold text-light">Itens em nossa loja</span>
-                </div>
-                <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">10.000</h1>
-                    <span class="fs-5 fw-semi-bold text-light">Clientes atendidos</span>
-                </div>
-                <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up"></h1>
-                    <span class="fs-5 fw-semi-bold text-light">Awards Achieved</span>
-                </div>
+<!-- Facts Start -->
+<div class="container-fluid facts my-5 py-5" data-parallax="scroll" data-image-src="img/carousel-1.jpg">
+    <div class="container py-5">
+        <div class="row g-5">
+            <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
+                <h1 class="display-4 text-white">
+                    <span>+</span><span data-toggle="counter-up">20</span>
+                </h1>
+                <span class="fs-5 fw-semi-bold text-light">Anos de mercado</span>
+            </div>
+            <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
+                <h1 class="display-4 text-white">
+                    <span>+</span><span data-toggle="counter-up">600</span>
+                </h1>
+                <span class="fs-5 fw-semi-bold text-light">Itens em nossa loja</span>
+            </div>
+            <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
+                <h1 class="display-4 text-white">
+                    <span>+</span><span data-toggle="counter-up">10.000</span>
+                </h1>
+                <span class="fs-5 fw-semi-bold text-light">Clientes atendidos</span>
+            </div>
+            <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
+                <h1 class="display-4 text-white">7</h1>
+                <span class="fs-5 fw-semi-bold text-light">Dias da semana abertos</span>
             </div>
         </div>
     </div>
-    <!-- Facts End -->
+</div>
+<!-- Facts End -->
+
 
 
     <!-- Features Start -->
@@ -654,7 +664,7 @@
         <div class="container py-5">
             <div class="row g-5 justify-content-center text-center">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Nossa loja</h4>
+                    <h4 class="text-white mb-4">Bela Casa <br> Produtos de Limpeza</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Avenida Presidente Kennedy <br> Número 14.216, Caiçara <br> Praia Grande - SP</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+55 13 98819-9921</p>
                     <!-- <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p> -->
@@ -708,7 +718,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+                    &copy; <a class="border-bottom" href="#">Bela Casa Produtos de Limpeza</a>, Todos direitos reservados.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
