--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="sobre.html" class="nav-item nav-link">Sobre</a>
                 <a href="servicos.html" class="nav-item nav-link">Serviços</a>
-                <a href="projetos.html" class="nav-item nav-link">Projetos</a>
+                <!-- <a href="projetos.html" class="nav-item nav-link">Projetos</a> -->
                <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light m-0">
