--- a/contato.html
+++ b/contato.html
@@ -77,8 +77,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="sobre.html" class="nav-item nav-link active">Sobre</a>
+                <a href="index.html" class="nav-item nav-link  ">Home</a>
+                <a href="sobre.html" class="nav-item nav-link">Sobre</a>
                 <a href="servicos.html" class="nav-item nav-link">Serviços</a>
                 <!-- <a href="projetos.html" class="nav-item nav-link">Projetos</a> -->
                <!-- <div class="nav-item dropdown">
@@ -91,7 +91,7 @@
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div> -->
-                <a href="contato.html" class="nav-item nav-link">Contato</a>
+                <a href="contato.html" class="nav-item nav-link active">Contato</a>
             </div>
             <a href="" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Fale conosco<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
@@ -102,12 +102,12 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
-            <h1 class="display-3 text-white mb-4 animated slideInDown">Sobre nós</h1>
+            <h1 class="display-3 text-white mb-4 animated slideInDown">Contato</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
-                    <li class="breadcrumb-item active" aria-current="page">Sobre</li>
+                    <li class="breadcrumb-item active" aria-current="page">Contato</li>
                 </ol>
             </nav>
         </div>
@@ -115,138 +115,60 @@
     <!-- Page Header End -->
 
 
-    <!-- About Start -->
+    <!-- Contact Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="row g-5 align-items-end">
-                <div class="col-lg-3 col-md-5 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="img/about.jpg">
-                </div>
-                <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.3s">
-                    <h1 class="display-1 text-primary mb-0">
-                        <span>+</span><span>20</span>
-                    </h1>
-                    <p class="text-primary mb-4">Anos de experiência</p>
-                    <h1 class="display-5 mb-4">Deixando sua casa mais cheirosa</h1>
-                    <p class="mb-4">Estamos há 20 anos deixando sua casa mais cheirosa na sua melhor versão</p>
-                    <a class="btn btn-primary py-3 px-4" href="https://wa.me/5513988199921?text=Ol%C3%A1!%20Achei%20voc%C3%AAs%20pelo%20site.">Contato</a>
-                </div>
-                
-                <div class="col-lg-3 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="row g-5">
-                        <div class="col-12 col-sm-6 col-lg-12">
-                            <div class="border-start ps-4">
-                                <i class="fa fa-award fa-3x text-primary mb-3"></i>
-                                <h4 class="mb-3">Marca registrada do bairro</h4>
-                                <span>Somos a principal loja do ramo no nosso bairro</span>
+            <div class="row g-5">
+                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                    <p class="fs-5 fw-bold text-primary">Contate-nos</p>
+                    <h1 class="display-5 mb-5">Se tiver qualquer dúvida, entre em contato conosco!</h1>
+                    <p class="mb-4">Clique no botão abaixo e mande sua mensagem pelo WhatsApp! <br> Ficaremos muito felizes em responder você! <!--<a href="https://htmlcodex.com/contact-form">Download Now</a>.</p> -->
+                    <form>
+                        <div class="row g-3">
+                            <!-- <div class="col-md-6">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                    <label for="name">Your Name</label>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-lg-12">
-                            <div class="border-start ps-4">
-                                <i class="fa fa-users fa-3x text-primary mb-3"></i>
-                                <h4 class="mb-3">Time dedicado</h4>
-                                <span>Temos um time dedicado a forcener do melhor com preço pequenininho</span>
+                            <div class="col-md-6">
+                                <div class="form-floating">
+                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                    <label for="email">Your Email</label>
+                                </div>
                             </div>
+                            <div class="col-12">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                    <label for="subject">Subject</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-floating">
+                                    <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
+                                    <label for="message">Message</label>
+                                </div>
+                            </div> 
+                            <div class="col-12">
+                                <button class="btn btn-primary py-3 px-4" type="submit">Send Message</button>
+                            </div> -->
+                            <a class="btn btn-primary py-3 px-4" href="https://wa.me/5513988199921?text=Ol%C3%A1!%20Achei%20voc%C3%AAs%20pelo%20site.">Contato</a>
                         </div>
+                    </form>
+                </div>
+                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 450px;">
+                    <div class="position-relative rounded overflow-hidden h-100">
+                        <iframe class="position-relative w-100 h-100"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3643.4146031018263!2d-46.54298372465477!3d-24.051700078466016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce204c7824e6d7%3A0x80d87219652b032!2sAv.%20Pres.%20Kennedy%2C%2014216%20-%20Vila%20Cai%C3%A7ara%2C%20Praia%20Grande%20-%20SP%2C%2011702-200!5e0!3m2!1spt-BR!2sbr!4v1740652009292!5m2!1spt-BR!2sbr"
+                        frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
+                        tabindex="0"></iframe>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- About End -->
+    <!-- Contact End -->
 
-
-<!-- Facts Start -->
-<div class="container-fluid facts my-5 py-5" data-parallax="scroll" data-image-src="img/carousel-1.jpg">
-    <div class="container py-5">
-        <div class="row g-5">
-            <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
-                <h1 class="display-4 text-white">
-                    <span>+</span><span data-toggle="counter-up">20</span>
-                </h1>
-                <span class="fs-5 fw-semi-bold text-light">Anos de mercado</span>
-            </div>
-            <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
-                <h1 class="display-4 text-white">
-                    <span>+</span><span data-toggle="counter-up">600</span>
-                </h1>
-                <span class="fs-5 fw-semi-bold text-light">Itens em nossa loja</span>
-            </div>
-            <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
-                <h1 class="display-4 text-white">
-                    <span>+</span><span data-toggle="counter-up">10.000</span>
-                </h1>
-                <span class="fs-5 fw-semi-bold text-light">Clientes atendidos</span>
-            </div>
-            <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
-                <h1 class="display-4 text-white">7</h1>
-                <span class="fs-5 fw-semi-bold text-light">Dias da semana abertos</span>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Facts End -->
-
-
-   <!-- Team Start -->
-   <div class="container-xxl py-5">
-    <div class="container">
-        <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-            <p class="fs-5 fw-bold text-primary">Nosso time</p>
-            <h1 class="display-5 mb-5">Dedicação e experiência</h1>
-        </div>
-        <div class="row g-4">
-            <!--<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="team-item rounded">
-                    <img class="img-fluid" src="img/team-1.jpg" alt="">
-                    <div class="team-text">
-                        <h4 class="mb-0">Doris Jordan</h4>
-                        <p class="text-primary">Landscape Designer</p>
-                        <div class="team-social d-flex">
-                            <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-instagram"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-            <div class="row g-4 d-flex justify-content-center">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="team-item rounded">
-                        <img class="img-fluid" src="img/team-2.jpg" alt="">
-                        <div class="team-text">
-                            <h4 class="mb-0">Maria Regina</h4>
-                            <p class="text-primary">Proprietária</p>
-                            <div class="team-social d-flex">
-                                <!--<a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a> -->
-                                <a class="btn btn-square rounded-circle me-2" href="https://www.instagram.com/belacasa_caicara/"><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href="https://wa.me/5513988199921?text=Ol%C3%A1!%20Achei%20voc%C3%AAs%20pelo%20site." target="_blank">
-                                    <i class="fab fa-whatsapp"></i>
-                                </a>
-                            </div>      
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                <div class="team-item rounded">
-                    <img class="img-fluid" src="img/team-3.jpg" alt="">
-                    <div class="team-text">
-                        <h4 class="mb-0">Diana Wagner</h4>
-                        <p class="text-primary">Senior Gardener</p>
-                        <div class="team-social d-flex">
-                            <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-instagram"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-        </div>
-    </div>
-</div>
-<!-- Team End -->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
